# companella

./: .editorconfig  .gitignore  .gitmodules  Companella.sln  Directory.Build.props  LICENSE  README.md  bpm.py  build.ps1  dans.json  mapping.sln  test.json
.github/workflows/: build-release.yml  codeql.yml  linter.yml  summary.yml  version-bump.yml
Companella/: Companella.csproj  CompanellaGame.cs  Program.cs  SplashForm.cs  app.manifest  version.txt
Companella.Analyzers/: .editorconfig  AccessibilityModifierAnalyzer.cs  Companella.Analyzers.csproj  CompanellaAnalyzer.cs  NamespaceAnalyzer.cs  Resources.resx
Companella.Analyzers/Attributes/: SuppressAttribute.cs  WinApiContextAttribute.cs
Companella.Analyzers/Helpers/: SuppressionHelper.cs  WinApiContextHelper.cs
Companella/Extensions/: Md5Extension.cs
Companella/Mods/: BaseMod.cs  ChordjackifyMod.cs  ExampleMod.cs  FullLNMod.cs  IMod.cs  LaneSwapMod.cs  ModContext.cs  ModResult.cs  NoLNMod.cs  NormalizeSvMod.cs  ReverseMod.cs
Companella/Properties/: AssemblyInfo.cs
Companella/Screens/: MainScreen.cs  TrainingScreen.cs
Companella/Services/: AudioExtractor.cs  BpmAnalyzer.cs  BpmCalculator.cs  DanConfigurationService.cs  HitErrorReaderService.cs  HitObjectSerializer.cs  InterludeDifficultyService.cs  ManipFactorCalculator.cs  MapClassifier.cs  MapMmrCalculator.cs  MapRecommendationService.cs  MapsDatabaseService.cs  (+20 more)
OsuMappingHelper/: OsuMappingHelper.csproj  OsuMappingHelperGame.cs  Program.cs  SplashForm.cs  version.txt
msd-calculator/: Cargo.toml  README.md
msd-calculator/src/: main.rs
(+272 files in other folders)
